Fixed problem where widgets couldn't be dragged into the main zone on tablet and fixed issue where navigation caused the browser to add a scrollbar due to an overlap.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1534,6 +1534,7 @@ color: @color-swatch5;
 }
 
 .main {
+    float: none;
     padding: 1em 0;
 }
 
@@ -1619,11 +1620,9 @@ color: @color-swatch5;
   }
 
   .top-nav .widget.extendednavigation .bk-overlay {
-      width: 200px;
-      height: 85px;
-      float: right;
+      width: 20%;
       top: -85px !important;
-      left: 90% !important;
+      left: inherit!important;
   }
 
   .widget.extendednavigation {
